<resources>
    <string name="app_name">JP3HelloWorld</string>
    <string name="hello">Hello</string>
    <string name="click_me">Click me</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="insert_email">Insert your email</string>
    <string name="insert_password">Insert your password</string>
    <string name="error_email">invalid email</string>
    <string name="error_password">password length must be at least 6 chars</string>
    <string name="success_login">Login success</string>
    <string name="button_clicked">Button clicked</string>
    <string name="insert_phone">Insert your phone number</string>
    <string name="welcome">Welcome</string>
</resources>
