<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">



    <EditText
        android:layout_width="match_parent"
        android:hint="@string/insert_email"
        android:inputType="textEmailAddress"
        android:id="@+id/username_et"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/baseline_account_circle_black_18"

        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/insert_password"
        android:inputType="textPassword"
        android:id="@+id/password_et"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_key_black"
        android:drawablePadding="5dp"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:text="@string/login"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn"
            android:text="@string/register"/>



    </LinearLayout>









</LinearLayout>